--- a/vizitka/index.html
+++ b/vizitka/index.html
@@ -1,33 +1,90 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vizitka</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>McDonald's menu</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="vizitka">
-    <div class="vnitrek">
-        <div class="predek">
-            <div class="levo">
-                <img src="ja.png" alt="Obrázek" class="obrazek">
-                <h2>Jakub Plha</h2>
-            </div>
-            <div class="pravo">
-                <p>Email: kubicek.plha@seznam.cz</p>
-                <p>Telefon: 123 456 789</p>
-                <p>Škola: VOŠ, SPŠ a SOŠ Varnsdorf</p>
-                <p>Třída: 2.IT</p>
-            </div>
-        </div>
+  <div class="container">
 
-        <div class="zadek">
-            <img src="logo.png" alt="Obrázek" class="obrazek-zadek">
-        </div>
+    <div class="nahore">
+
+      <img src="logo.jpg" alt="McDonald's Logo">
+
     </div>
-  </div>
 
+    <div class="vlevo">
+
+      <img src="burger.png" alt="McDonald's Cheeseburger">
+      <img src="burger.png" alt="McDonald's Cheeseburger">
+      <img src="burger.png" alt="McDonald's Cheeseburger">
+      <img src="burger.png" alt="McDonald's Cheeseburger">
+      <img src="burger.png" alt="McDonald's Cheeseburger">
+
+    </div>
+
+    <div class="uprostred">
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+      <div class="burger">
+        <img src="burger.png" alt="McDonald's Cheeseburger">
+        <h3>Cheeseburger</h3>
+        <p>42 Kč</p>
+      </div>
+
+    </div>
+
+    <div class="tlacitko">
+
+      <button class="tlacitko cancel">Cancel Order</button>
+      <button class="tlacitko add">Add to Order</button>
+    
+    </div>
+
+  </div>
 </body>
 </html>
